prevent word-wrapping tags in the sidebar
"how-to" was getting split.  Now "special olympics" forces bad line
breaks, hmm....

--- a/style/style.scss
+++ b/style/style.scss
@@ -485,6 +485,9 @@ a.headerlink {
 
 .tight {
     word-spacing: -.05em;
+    & li a {
+        white-space: nowrap;    // prevent "how-to" being split across lines.
+    }
 }
 
 .body {
